@@ -1,3 +1,5 @@
+include $(top_srcdir)/build-aux/init.mk
+
 # Program to check:
 check_PROGRAMS =					\
 			singleton1			\
@@ -15,13 +17,7 @@ ullfp1_SOURCES =	ullfp1.cc
 ullfptab1_SOURCES =	ullfptab1.cc
 
 # List your tests here:
-TESTS =							\
-			singleton1.test			\
-			singleton2.test			\
-			udouble1.test			\
-			ufloat1.test			\
-			ullfp1.test			\
-			ullfptab1.test
+TESTS = $(check_PROGRAMS:=.test)
 
 ## ---------------- ##
 ## libport/config.h ##
@@ -29,7 +25,7 @@ TESTS =							\
 
 # Create a false libport/config.h just for tests, which
 # does not specify the sort of ufloats to use.
-BUILT_SOURCES = libport/config.h
+BUILT_SOURCES += libport/config.h
 # Do not define the variety of ufloats to use.
 libport/config.h: $(top_builddir)/libport/config.h
 	test -d libport || mkdir libport
@@ -42,20 +38,15 @@ clean-local:
 	rm -rf libport
 
 # Find the libport files, but our config.h for tests first.
-AM_CPPFLAGS = -I. -I$(top_srcdir)
-
-
-
+AM_CPPFLAGS += -I. -I$(top_srcdir)
 
 $(TESTS):
 	for i in $(TESTS); do \
           $(LN_S) -f $(top_builddir)/build-aux/test.sh $$i || exit 1; \
         done
 
-EXTRA_DIST = $(TESTS:.test=.stdout) common_ufloat1.cc
-CLEANFILES = $(TESTS:.test=.my_stdout)		\
-	     $(TESTS:.test=.my_stderr)		\
-	     $(TESTS:.test=.valgrind.log)
+EXTRA_DIST += $(TESTS:.test=.stdout) common_ufloat1.cc
+CLEANFILES += $(TESTS:.test=.{my_stdout,my_stderr,valgrind.log}
 
 TESTS_ENVIRONMENT = SRCDIR=$(srcdir)
 
